--- a/src/app/indexer/ops/commands/commands.component.html
+++ b/src/app/indexer/ops/commands/commands.component.html
@@ -205,6 +205,11 @@
                 <p>Show my hidden commands</p>
                 <mat-checkbox [(ngModel)]="active_view.showDeletedCommands" (ngModelChange)="doFilter()"></mat-checkbox>
               </div>
+
+              <div class="inline-filter">
+                <p>Hide planned commands</p>
+                <mat-checkbox [(ngModel)]="active_view.hide_planned_commands" (ngModelChange)="doFilter()"></mat-checkbox>
+              </div>
             </div>
 
           </div>
@@ -280,14 +285,18 @@
               </div>
 
               <div class="command-list" *ngIf="!loading && commands && commands.length > 0">
-                <div class="command-ngfor" *ngFor="let command of commands; let i = index; trackBy: trackCommandByFn" [ngClass]="{'hidden-command': command?.hidden===true, 'selected-command': command?.cmd_id == selected_command?.cmd_id, 'command_highlight': command?.type=='attack'}">
+                <div class="command-ngfor" *ngFor="let command of commands; let i = index; trackBy: trackCommandByFn" [ngClass]="{'hidden-command': command?.hidden===true, 'planned-command': command?.is_planned===true, 'selected-command': command?.cmd_id == selected_command?.cmd_id, 'command_highlight': command?.type=='attack' && !command?.is_planned}">
                   <div class="command" (click)="selectCommand(command)">
 
                     <div class="command-content">
                       <div class="left">
 
+                        <div class="command-type" *ngIf="command?.is_planned==true" title="This is a planned command. It has yet to depart">
+                          <img src="../../assets/images/game/planned.png" style="">
+                        </div>
+
                         <div class="command-type">
-                          <div class="attack_type32x32 {{command.type}}" [ngClass]="{'glow': command.type=='attack', 'revolt_arising': command?.attacking_strategy=='revolt_arising', 'revolt_running': command?.attacking_strategy=='revolt_running'}"></div>
+                          <div class="attack_type32x32 {{command.type}}" [ngClass]="{'glow': command.type=='attack' && !command?.is_planned, 'revolt_arising': command?.attacking_strategy=='revolt_arising', 'revolt_running': command?.attacking_strategy=='revolt_running'}"></div>
                         </div>
 
                         <div class="command-details">
@@ -309,14 +318,22 @@
 
                           </div>
                           <div class="command-timing">
-                            <div class="eta">{{command.eta}}</div>
-                            (
-                            <div class="arrival-human" *ngIf="command.subtype != 'cs_eta' && command.subtype != 'attack_takeover' && command.subtype != 'ongoing_revolt'">Arrival at<span *ngIf="command.subtype == 'portal'"> portal</span>: {{command.arrival_human}}</div>
-                            <div class="arrival-human" *ngIf="command.subtype == 'cs_eta' || command.subtype == 'attack_takeover' && command.subtype != 'ongoing_revolt'">Colonized at: {{command.arrival_human}}</div>
-                            <div class="arrival-human" *ngIf="command.subtype == 'ongoing_revolt' && command.attacking_strategy=='revolt_arising'">Phase 2 start: {{command.cancel_human}},&nbsp;</div>
-                            <div class="arrival-human" *ngIf="command.subtype == 'ongoing_revolt'">Phase 2 end: {{command.arrival_human}}</div>
-                            <div class="cancel-human" *ngIf="command.cancelable && active_view && active_view?.showCancelTime">, cancelable until: {{command.cancel_human}}</div>
-                            )
+                            <div *ngIf="!command?.is_planned">
+                              <div class="eta">{{command.eta}}</div>
+                              (
+                              <div class="arrival-human" *ngIf="command.subtype != 'cs_eta' && command.subtype != 'attack_takeover' && command.subtype != 'ongoing_revolt'">Arrival at<span *ngIf="command.subtype == 'portal'"> portal</span>: {{command.arrival_human}}</div>
+                              <div class="arrival-human" *ngIf="command.subtype == 'cs_eta' || command.subtype == 'attack_takeover' && command.subtype != 'ongoing_revolt'">Colonized at: {{command.arrival_human}}</div>
+                              <div class="arrival-human" *ngIf="command.subtype == 'ongoing_revolt' && command.attacking_strategy=='revolt_arising'">Phase 2 start: {{command.cancel_human}},&nbsp;</div>
+                              <div class="arrival-human" *ngIf="command.subtype == 'ongoing_revolt'">Phase 2 end: {{command.arrival_human}}</div>
+                              <div class="cancel-human" *ngIf="command.cancelable && active_view && active_view?.showCancelTime">, cancelable until: {{command.cancel_human}}</div>
+                              )
+                            </div>
+                            <div *ngIf="command?.is_planned == true">
+                              <div class="cancel-human">
+                                Departure: {{command.cancel_human}} -
+                                Targeted arrival: {{command.arrival_human}} ({{command.eta}})
+                              </div>
+                            </div>
                             <div class="deleted-status" *ngIf="command.delete_status != ''">
                               <mat-icon>delete</mat-icon> This command is hidden. Only you can see it
                             </div>
@@ -430,6 +447,20 @@
               </div>
 
               <hr style="margin: 10px;">
+
+              <div *ngIf="selected_command?.is_planned==true">
+                <app-alert [dismissible]="false" type="warning" [showIcon]="false">
+                  This is a planned command. It has yet to be sent by
+                  <img style="height: 18px; margin-top: -5px;" src="../../assets/images/player_ico.png"/>&nbsp;
+                  <span class="gd-brown">{{selected_command.src_ply_n}}</span>
+                  <br/><br/>
+                  <div style="font-size: 80%;">
+                    Expected departure: {{selected_command.cancel_human}}
+                    Expected arrival: {{selected_command.arrival_human}}
+                  </div>
+                </app-alert>
+                <hr style="margin: 10px;">
+              </div>
 
               <h5><strong>Comments</strong></h5>
               <div class="comments-content">
