--- a/src/app/changelog/changelog.component.html
+++ b/src/app/changelog/changelog.component.html
@@ -15,6 +15,7 @@
         <!--</a>-->
         <!--</div>-->
         <!--<br/>-->
+
         <div class="text-center"><h1 class="gd-secondary"> City Indexer Userscript Changelog</h1>
           <h4>
             <a href="https://github.com/GrepoDataTools/grepodata-backend/commits/master/Software/Application/Indexer/indexer.js" target="_blank">
@@ -32,10 +33,25 @@
         <app-script-version
           [collapsable]="false"
           [new]="true"
-          [title]="'12-03-2023 - Command Sharing'"
+          [title]="'24-09-2023 - Team Operations: push notifications & sharing attack plans'"
+          [github_url]="'https://github.com/GrepoDataTools/grepodata-backend/commit/26a3f70c80bd4673a28c9f708e526a2d3140024b#diff-c99d467c47c572f6de633952fa1de8c54b36adb85d925f031b05dcad62e2d39e'">
+          <ul>
+            <li>We added a 'Team Ops' button to the game menu that shows your current active operations and recent notifications.</li>
+            <li>We added a 'Share with team' button to the attack planner that allows users to upload planned commands to Team Operations.</li>
+            <li>All team members will now get push notifications in-game when new commands are shared within the team.</li>
+          </ul>
+          <br/><img style="max-width: 70%;" src="../../assets/images/notifications.png"><br/><br/>
+        </app-script-version>
+
+        <hr/>
+
+        <app-script-version
+          [collapsable]="false"
+          [new]="false"
+          [title]="'12-03-2023 - Team Operations: Share Your Command Overview'"
           [github_url]="'https://github.com/GrepoDataTools/grepodata-backend/commit/26a3f70c80bd4673a28c9f708e526a2d3140024b#diff-c99d467c47c572f6de633952fa1de8c54b36adb85d925f031b05dcad62e2d39e'">
           <p>
-            We added a button the the command overview that allows users to share their commands with their GrepoData teams.
+            We added a button the command overview that allows users to share their commands with their GrepoData teams.
             Team members can upload their commands and can browse a combined real-time command overview together with the entire team.
           </p>
           <br/><img style="max-width: 70%;" src="../../assets/images/share_commands.jpg"><br/><br/>
