--- a/src/app/indexer/ops/help/help.component.html
+++ b/src/app/indexer/ops/help/help.component.html
@@ -10,13 +10,14 @@
     <div class="container" style="padding: 0 !important;">
       <div class="row">
 
+
         <div class="col-xs-12">
 
           <app-server-alert></app-server-alert>
 
-          <app-alert type="info" title="What is GrepoData Team Operations?" [dismissible]="false">
+          <app-alert type="info" title="What are Team Operations?" [dismissible]="false">
             <div style="min-height: 73px !important;">
-              <h5>This tool allows you to share a command overview with your teammates.</h5>
+              <h5>The Team Ops tool allows you to share a command overview with your teammates.</h5>
               <p>
                 1. You can <strong>share commands</strong> using your in-game command overview (Curator Advisor required).<br/>
                 2. Your uploaded commands are shared with the teams that you are currently contributing to.<br/>
@@ -26,11 +27,7 @@
             </div>
           </app-alert>
 
-        </div>
-
-        <div class="col-xs-12">
-
-          <app-alert type="info" title="Use our userscript to share your in-game command overview" [dismissible]="false">
+          <app-alert type="info" title="Share your commands (Userscript required)" [dismissible]="false">
             <p>
               If you want to start or contribute to an operation, simply upload your commands using the in-game userscript.<br/>
               To do this, <strong>you need to have the userscript installed</strong> and you need to be part of a team.<br/>
@@ -47,6 +44,13 @@
 
       </div>
     </div>
+
+
+    <div class="command-footer" style="text-align: center;">
+      <br/>
+      Grepolis is a browser game by InnoGames GmbH. Gameplay images related to Grepolis are copyright of InnoGames GmbH. GrepoData is an unofficial 3rd party site.
+    </div>
+
 
   </div>
 
