--- a/src/app/layout/indexer-breadcrumbs/indexer-breadcrumbs.component.html
+++ b/src/app/layout/indexer-breadcrumbs/indexer-breadcrumbs.component.html
@@ -115,10 +115,10 @@
       <a class="gd-secondary hover-scale" routerLink="/profile/ops">
         <mat-icon style="vertical-align: bottom;">keyboard_backspace</mat-icon>&nbsp;
         <span class="ops-gd-header hidden-xs hidden-sm">
-          <span style="color: rgb(103, 103, 103)">GREPO</span>
+          <span style="color: rgb(103, 103, 103)" class="dmf1">GREPO</span>
           <span style="color: rgb(24, 188, 156)">DATA</span>
         </span>
-        <span style="color: #334254 !important;" class="hidden-xxs">&nbsp;Team Ops</span>
+        <span style="color: #334254;" class="hidden-xxs dmf2">&nbsp;Team Ops</span>
       </a>
     </li>
 
